fixing gaps in homePage

--- a/knowBeforeYouGo/src/app/navbar/navbar.component.css
+++ b/knowBeforeYouGo/src/app/navbar/navbar.component.css
@@ -15,9 +15,9 @@
   color:red;
 }
 
-.custom-navbar {
+/* .custom-navbar {
   border: 0.05em solid rgba(0, 0, 255, 0.555);
-}
+} */
 
 .navbar {
   font-family: Cachet;
